chore: remove validation on name parameter in UpdateRequest.